# cad

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE-FABLE-5.md  index.html  package-lock.json  package.json  playwright.config.ts  run.sh  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: DESIGN-hybrid-cad.md  FEATURE-AGENT-BRIEFING.md  FUSION-360-PARITY.md  IMPLEMENTED-11-CONSTRAINTS-2026-06-14.md  IMPLEMENTED-2026-06-14.md  IMPLEMENTED-30-PHASE2-2026-06-14.md  IMPLEMENTED-30-TIMELINE-2026-06-14.md  IMPLEMENTED-INSPECT-MESH-CAMERA-2026-06-14.md  IMPLEMENTED-LLM-CAD-2026-06-14.md  LLM-CAD-SYSTEM-PROMPT.md  PARALLEL-AGENTS-FUSION-PARITY.md
src/: ARCHITECTURE.md  app-menu.ts  body-edit.ts  body-kind.ts  browser-panel.ts  cad-body.ts  cad-scene.ts  contour-body.ts  contour-spline.ts  drawing.ts  feature-recipe.ts  feature-recompute.ts  feature-timeline.ts  floating-panel.ts  fusion-shortcuts.ts  history-timeline.ts  main.ts  project-file.ts  project-io.ts  scan-align.ts  scan-hit.ts  scan-plane-align.ts  scan-visual.ts  sketch-dimension.ts  sketch-geometry.ts  sketch.ts  solid-command.ts  solid-extrude-gizmo.ts  solid-extrude.ts  solid-features.ts  solid-loft.ts  solid-ops.ts  solid-pick.ts  solid-revolve.ts  solid-subtract.ts  style.css  types.ts  undo.ts  view-cube.ts  wasm.ts  (+1 more)
test/: app-util.test.ts  body-edit.test.ts  body-kind.test.ts  cad-scene-undo.test.ts  cad-script-csg.test.ts  cad-script-errors.test.ts  cad-script-primitives.test.ts  cad-script-runtime.test.ts  cad-script-sdf.test.ts  (+26 more)
wasm-stl/: Cargo.toml
wasm-stl/src/: boolean.rs  lib.rs  project.rs
(+219 files in other folders)
